--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <h3>Reflection</h3>
     <p class="mono">Failure has been my greatest teacher. After falling short of my goal in the first micromechanics exam – by one tenth of a point – the following weeks were spent under the collapsed myth that I will always find success in pursuit of a watchmaking career.</p>
       <p class="mono">Consistency is a necessity of this craft. I learned new techniques for shaping brass and aluminum, but more importantly, I began to understand tolerances – with technical measurements and my own imperfect self.</p>
-      <p class="mono">This section exists to display those imperfections (as growth) over two months of training; the disappointing outcome was a recalibration from perfection to progress. Precision matters, but hopefully my identity no longer depends on it. The failure stripped away my need to prove anything, and what remains is humility, directed attention toward consistency, and the work that remains.</p>
+      <p class="mono">This section exists to display those imperfections (as growth) over two months of training; the disappointing outcome was a recalibration from perfection to progress. Precision matters, but hopefully my identity no longer depends on it. The failure stripped away my need to prove anything, and what remains is humility, directed attention toward consistency, and the work in subsequent sections of the program.</p>
 
     <h2 style="margin-top:18px">Selected Work - "Aluminum Anvil"</h2>
 
